# Crisis-Command

./: .env.example  .gcloudignore  .gitignore  Dockerfile.api  README.md  SETUP.md  config.py  deploy-secure.ps1  docker-compose.yml  logger.py  pyproject.toml  service.yaml  start-local-mcp.ps1  working.md
.claude/: settings.local.json
agents/calendar_agent/: actions.py  agent.py  mcp_server.py  run_sse.py
agents/chat_agent/: __init__.py  actions.py  agent.py  mcp_server.py  run_sse.py  test.py
agents/docs_agent/: actions.py  agent.py  mcp_server.py  run_sse.py
agents/github_agent/: mcp_server.py  run_sse.py
agents/logging_agent/: mcp_server.py  run_sse.py
auth/: oauth.py
database/: db.py  schema.sql  seed.py
orchestrator/: agent.py  classifier.py  doc_analysis_agent.py  mcp_clients.py  post_mortem.py
simulator/: fire_incident.py
ui/: dashboard.html
webhook/: main.py
